[package]
name = "retry"
version = "0.1.0"
authors = ["Marshall Culpepper <mcu@hey.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# clap = "3.0.0-beta.2"
getopts = "0.2"
shlex = { git = "https://github.com/fenhl/rust-shlex" }

[build-dependencies]
built = { version = "0.4", features = ["chrono", "git2"] }
