cargo-features = ["strip"]

[package]
name = "retry"
version = "0.1.0"
authors = ["Marshall Culpepper <mcu@hey.com>"]
edition = "2018"
build = "build.rs"

[[bin]]
name = "retry-mock-cmd"
path = "tests/bin/retry_mock_cmd.rs"
test = false

[dependencies]
getopts = "0.2"
shlex = { git = "https://github.com/fenhl/rust-shlex" }

[build-dependencies]
built = { version = "0.4", features = ["chrono", "git2"] }

[dev-dependencies]
assert_cmd = "1.0.2"
assert_fs = "1.0.0"
predicates = "1.0.6"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
